# CrazyS

./: .gitignore  README.md  plot_8cf40dd.sh  plot_e5ae0c2.sh  waypoints_swarm.csv  waypoints_swarm.ods
docker/: Dockerfile  Makefile  Readme.md  deploy-key  deploy-key.pub  distributed_record.sh  generate-video.sh  metrics.py  run-simulation.sh  run-thrymr-full.sh  run-thrymr.sh  save-hw-logs.sh
keyboard_pub/: CMakeLists.txt  package.xml
keyboard_pub/src/: keyboard.cpp
log_output/: Makefile  plot.gplt
rotors_control/: CMakeLists.txt
rotors_control/include/rotors_control/: Eigen.h  common.h  llc_controller.h  mpc_controller.h
rotors_control/resource/: model_scripted.pt
rotors_control/src/nodes/: distance_measurement_sim.cpp  distance_measurement_sim.h  playback_node.cpp  playback_node.h  position_controller_light.cpp  position_controller_light.h  position_controller_mpc.cpp  position_controller_mpc.h  position_controller_node.cpp  relative_distance_controller.cpp  relative_distance_controller.h  swarm_controller.cpp  swarm_controller.h  swarm_state_estimator.cpp  swarm_state_estimator.h
rotors_description/urdf/: crazyflie2_forster.xacro
rotors_gazebo/: CMakeLists.txt
rotors_gazebo/launch/: crazyflie2_circles.launch  crazyflie2_dist1.launch  crazyflie2_dist15.launch  crazyflie2_dist1_chain.launch  crazyflie2_dist1_fixed.launch  crazyflie2_dist2.launch  crazyflie2_dist2_chain.launch  crazyflie2_dist2_rover.launch  crazyflie2_dist4_hw.launch  crazyflie2_dist5.launch  crazyflie2_dist5_box4.launch  crazyflie2_dist5_chain.launch  crazyflie2_dist9.launch  crazyflie2_dist9_rover.launch  crazyflie2_distX_inner.launch  crazyflie2_hovering_example.launch  crazyflie2_hovering_swarm.launch  crazyflie2_hovering_two.launch  crazyflie2_join15.launch  crazyflie2_playback.launch  crazyflie2_step_response.launch  crazyflie2_swarm.launch  crazyflie2_swarm15.launch  crazyflie2_swarm15_obstacle2.launch  crazyflie2_swarm15_obstacle3.launch  crazyflie2_swarm2.launch  crazyflie2_swarm2_obstacle.launch  crazyflie2_swarm2_obstacle2.launch  crazyflie2_swarm30.launch  crazyflie2_swarm30_obstacle2.launch  crazyflie2_swarm30_obstacle3.launch  crazyflie2_swarm4.launch  crazyflie2_swarm4_obstacle2.launch  crazyflie2_swarm4_obstacle3.launch  crazyflie2_swarm9.launch  crazyflie2_swarm9_obstacle2.launch  crazyflie2_swarm9_obstacle3.launch  crazyflie2_swarmX_inner.launch  crazyflie2_test1.launch  crazyflie2_test2.launch  (+6 more)
rotors_gazebo/models/box_simple/: model.config  model.sdf
rotors_gazebo/models/cylinder_obstacle/: model.config  model.sdf
rotors_gazebo/models/cylinder_obstacle/materials/scripts/: obstacle.material
rotors_gazebo/models/flat_marker/: model.config  model.sdf
rotors_gazebo/models/flat_marker/materials/scripts/: flat_marker.material
rotors_gazebo/models/marker/: model.config  model.sdf  model_blue.sdf  model_green.sdf  model_red.sdf
rotors_gazebo/models/scale_plane/: model-1_4.sdf  model.config  model.sdf
rotors_gazebo/models/scale_plane/materials/scripts/: scale.material
rotors_gazebo/models/scale_plane10/: model.config  model.sdf
rotors_gazebo/models/scale_plane30/: model.config  model.sdf
rotors_gazebo/resource/: controller_crazyflie2.yaml  controller_crazyflie2_playback.yaml  crazyflie2.yaml  crazyflie2_mpc1_fin.yaml  crazyflie2_mpc1_params1.yaml  crazyflie2_mpc1_params2.yaml  crazyflie2_mpc1_params2a.yaml  crazyflie2_mpc1_params2b.yaml  crazyflie2_mpc1_params2c.yaml  crazyflie2_mpc1_params2d.yaml  crazyflie2_mpc1_params3.yaml  crazyflie2_mpc1_params4.yaml  crazyflie2_mpc1_params5.yaml  crazyflie2_mpc1_params6.yaml  crazyflie2_mpc1_placeholder.yaml  crazyflie2_reynolds_params1.yaml  crazyflie2_reynolds_params2.yaml  crazyflie2_spc_global_A.yaml  crazyflie2_spc_global_B.yaml  crazyflie2_spc_local_A.yaml  crazyflie2_spc_local_B.yaml  crazyflie2_step-response_A.yaml  crazyflie2_step-response_B.yaml  crazyflie2_step-response_C.yaml  crazyflie2_swarm_params.yaml  crazyflie2_swarm_params2.yaml  crazyflie2_swarm_params3.yaml  crazyflie2_swarm_params4.yaml  crazyflie2_swarm_params5.yaml  crazyflie_parameters.yaml  example_waypoints_crazyflie2.txt
rotors_gazebo/src/nodes/: global_controller.cpp  hovering_example.cpp  waypoint_publisher_csv.cpp  waypoint_publisher_timed.cpp
rotors_gazebo/waypoints/: generate-waypoints.sh  my_attitude-hover.csv  my_attitude-test.csv  waypoints_circles_0.txt  waypoints_circles_1.txt  waypoints_hover_0.txt  waypoints_step_multiple.txt  waypoints_step_v.txt  waypoints_step_x.txt  waypoints_swarm.ods  waypoints_swarm_1.txt  waypoints_swarm_2.txt  waypoints_swarm_3.txt  waypoints_swarm_6.txt  waypoints_swarm_7.txt  waypoints_swarm_8.txt
rotors_gazebo/worlds/: basic_crazyflie.world  basic_crazyflie_air.world  basic_crazyflie_box.world  basic_crazyflie_box4.world  basic_crazyflie_large.world  basic_crazyflie_large_cones.world  basic_crazyflie_obstacle.world  basic_crazyflie_obstacle0.world  basic_crazyflie_obstacle2.world  basic_crazyflie_obstacle3.world  basic_crazyflie_obstacle5.world  basic_crazyflie_obstacle6.world  basic_crazyflie_obstacle7.world
rotors_gazebo_plugins/: CMakeLists.txt
rotors_simulator/: package.xml
waypoints/: my_attitude-20201103T16-47-33.csv  my_attitude-20201103T16-56-14.csv  my_attitude-20201105T10-21-47.csv  my_attitude-20201105T10-43-16.csv  my_attitude-20201110T14-49-10.csv  my_attitude-20201110T18-16-56.csv  waypoints_hover_0.txt  waypoints_move_0.txt  waypoints_step_x.txt  waypoints_steps_small.txt  waypoints_swarm_4.txt  waypoints_swarm_5.txt  waypoints_swarm_9.txt
